# eazytutors

./: Cargo.toml
tutor-nodb/: .env  Cargo.toml  setup_db.sh
tutor-nodb/src/: handlers.rs  lib.rs  main.rs  models.rs  routes.rs  state.rs
tutor-nodb/tests/: routes.rs
tutordb/: Cargo.toml  backup.dump  init_db.sql
tutordb/.sqlx/: query-0323f4c29f2c58698ace03451f43980859f67340a1a8a7386d7fab0c2f66d970.json  query-a397bacdee21a21bdec1005ea25a10c1042061eedf898e4860a69ebae4b29073.json
tutordb/src/: lib.rs
tutordb/src/models/: courses.rs  mod.rs  tutor.rs
tutordb/src/repositories/: course_repository.rs  mod.rs  tutor_repository.rs
