[package]
name = "tutor-nodb"
version = "0.1.0"
authors=["kodevoid"]
edition = "2024"
default-run ="tutor-nodb"

[[bin]]
name="basic-server"
path="src/bin/basic_server.rs"

[[bin]]
name="tutor-service"
path="src/bin/tutor_service.rs"

[lib]
path="src/lib.rs"


[dependencies]
actix-web = "4.2.1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
