[package]
name = "tutor-nodb"
version = "0.1.0"
authors=["kodevoid"]
edition = "2024"
default-run ="tutor-nodb"

[[bin]]
name="basic-server"
path="src/bin/basic_server.rs"


[lib]
path="src/lib.rs"


[dependencies]
actix-web = "4.2.1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.18.0", features = ["serde", "v4"] }
