[package]
name = "tutordb"
version = "0.1.0"
edition = "2024"

[lib]
path="src/lib.rs"
[dependencies]
bigdecimal = { version = "0.4.8", features = ["serde"] }
chrono = "0.4.41"
postgres = "0.19.10"
sqlx = { version = "0.8.6", features = ["macros", "postgres", "chrono", "runtime-tokio", "uuid", "bigdecimal"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "tokio-macros"] }
uuid = { version = "1.18.0", features = ["v4"] }
